syntax = "proto3";

package user;
option go_package = "github.com/SomeHowMicroservice/shm-be/services/user/protobuf";

service UserService {
  rpc CheckEmailExists(CheckEmailExistsRequest) returns (CheckEmailExistsResponse);

  rpc CheckUsernameExists(CheckUsernameExistsRequest) returns (CheckUsernameExistsResponse);

  // rpc GetUserById(GetUserByIdRequest) returns (UserResponse);

  // rpc GetUserByEmail(GetUserByEmailRequest) returns (UserResponse);

  // rpc GetUserByUsername(GetUserByUsernameRequest) returns (UserResponse);

  rpc CreateUser(CreateUserRequest) returns (UserResponse);

  // rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
}

message CheckEmailExistsRequest {
  string email = 1;
}

message CheckEmailExistsResponse {
  bool exists = 1;
}

message CheckUsernameExistsRequest {
  string username = 1;
}

message CheckUsernameExistsResponse {
  bool exists = 1;
}

message UserResponse {
  string id = 1;
  string username = 2;
  string email = 3;
  string password = 4;
  string created_at = 5;
  string updated_at = 6;
}

// message GetUserByIdRequest {
//   string id = 1;
// }

// message GetUserByEmailRequest {
//   string email = 1;
// }

// message GetUserByUsernameRequest {
//   string username = 1;
// }

message CreateUserRequest {
  string username = 1;
  string email = 2;
  string password = 3;
}

// message DeleteUserRequest {
//   string id = 1;
// }

// message DeleteUserResponse {
//   string message = 1;
// }
